# ASK_PDF

./: README.md  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/5bcefa92-f03f-43cb-b9ee-5c421debe0f0/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/5bcefa92-f03f-43cb-b9ee-5c421debe0f0/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/61487c0c-b8fd-4589-92e8-dd4d9cc6c47f/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/61487c0c-b8fd-4589-92e8-dd4d9cc6c47f/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/b17d2b17-ea40-41fa-aae8-2ea82a00a1f4/payload_index/: IDENTITY  LOG  MANIFEST-000005
qdrant_storage/collections/docs/0/segments/e012ff2a-23ff-40ff-89c6-897f19116158/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/e012ff2a-23ff-40ff-89c6-897f19116158/payload_index/: IDENTITY  LOG  MANIFEST-000005
